{
  "version": 4,
  "terraform_version": "1.1.7",
  "serial": 21,
  "lineage": "77b05f62-1917-bf11-46c3-295ca0023d0d",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08c0db70af8b5d1c7",
            "domain": "vpc",
            "id": "eipalloc-08c0db70af8b5d1c7",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-15-164-147-178.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "15.164.147.178",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:052937454741:internet-gateway/igw-06da2ac31d826af55",
            "id": "igw-06da2ac31d826af55",
            "owner_id": "052937454741",
            "tags": {
              "Managed_by": "terraform",
              "Name": "user**-igw"
            },
            "tags_all": {
              "Managed_by": "terraform",
              "Name": "user**-igw"
            },
            "vpc_id": "vpc-0d8f1ce5760c97c42"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08c0db70af8b5d1c7",
            "connectivity_type": "public",
            "id": "nat-055f169c25258eb30",
            "network_interface_id": "eni-08d82f162d3d600e3",
            "private_ip": "10.0.1.161",
            "public_ip": "15.164.147.178",
            "subnet_id": "subnet-08fd5274ad9854afb",
            "tags": {
              "Name": "user**-nat-gw"
            },
            "tags_all": {
              "Name": "user**-nat-gw"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-06da2ac31d826af55",
            "id": "r-rtb-04b029711a1439ae71080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04b029711a1439ae7",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-037440f64a3d06a8a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-055f169c25258eb30",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-037440f64a3d06a8a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:052937454741:route-table/rtb-037440f64a3d06a8a",
            "id": "rtb-037440f64a3d06a8a",
            "owner_id": "052937454741",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Managed_by": "terraform",
              "Name": "user**-private-rt"
            },
            "tags_all": {
              "Managed_by": "terraform",
              "Name": "user**-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d8f1ce5760c97c42"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:052937454741:route-table/rtb-04b029711a1439ae7",
            "id": "rtb-04b029711a1439ae7",
            "owner_id": "052937454741",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Managed_by": "terraform",
              "Name": "user**-public-rt"
            },
            "tags_all": {
              "Managed_by": "terraform",
              "Name": "user**-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d8f1ce5760c97c42"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0662a78058129e9b0",
            "route_table_id": "rtb-037440f64a3d06a8a",
            "subnet_id": "subnet-0f4dcb3bcdd353ad9"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cdb2914781337664",
            "route_table_id": "rtb-037440f64a3d06a8a",
            "subnet_id": "subnet-0314894bb49e11f2b"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01f60a8ba4ff09b4f",
            "route_table_id": "rtb-04b029711a1439ae7",
            "subnet_id": "subnet-08fd5274ad9854afb"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0be86ac9058882111",
            "route_table_id": "rtb-04b029711a1439ae7",
            "subnet_id": "subnet-0593df85a1b97e4f4"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "admin",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:052937454741:security-group/sg-03f6a9258db4577d9",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03f6a9258db4577d9",
            "ingress": [],
            "name": "user**-admin-sg",
            "name_prefix": "",
            "owner_id": "052937454741",
            "revoke_rules_on_delete": false,
            "tags": {
              "Managed_by": "terraform",
              "Name": "user**-admin-sg"
            },
            "tags_all": {
              "Managed_by": "terraform",
              "Name": "user**-admin-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d8f1ce5760c97c42"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:052937454741:security-group/sg-05d81390d7cbe0536",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05d81390d7cbe0536",
            "ingress": [],
            "name": "user**-web-sg",
            "name_prefix": "",
            "owner_id": "052937454741",
            "revoke_rules_on_delete": false,
            "tags": {
              "Managed_by": "terraform",
              "Name": "user**-web-sg"
            },
            "tags_all": {
              "Managed_by": "terraform",
              "Name": "user**-web-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d8f1ce5760c97c42"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "admin_access_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "116.127.84.104/32"
            ],
            "description": "Allow SSH for admin",
            "from_port": 22,
            "id": "sgrule-59773084",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-03f6a9258db4577d9",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.admin",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "http_access_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow HTTP",
            "from_port": 80,
            "id": "sgrule-905882124",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-05d81390d7cbe0536",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.web",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:052937454741:subnet/subnet-0f4dcb3bcdd353ad9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f4dcb3bcdd353ad9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "052937454741",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Managed_by": "terraform",
              "Name": "user**-private-subnet-0"
            },
            "tags_all": {
              "Managed_by": "terraform",
              "Name": "user**-private-subnet-0"
            },
            "vpc_id": "vpc-0d8f1ce5760c97c42"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:052937454741:subnet/subnet-0314894bb49e11f2b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.13.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0314894bb49e11f2b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "052937454741",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Managed_by": "terraform",
              "Name": "user**-private-subnet-1"
            },
            "tags_all": {
              "Managed_by": "terraform",
              "Name": "user**-private-subnet-1"
            },
            "vpc_id": "vpc-0d8f1ce5760c97c42"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:052937454741:subnet/subnet-08fd5274ad9854afb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08fd5274ad9854afb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "052937454741",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Managed_by": "terraform",
              "Name": "user**-public-subnet-0"
            },
            "tags_all": {
              "Managed_by": "terraform",
              "Name": "user**-public-subnet-0"
            },
            "vpc_id": "vpc-0d8f1ce5760c97c42"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:052937454741:subnet/subnet-0593df85a1b97e4f4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0593df85a1b97e4f4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "052937454741",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Managed_by": "terraform",
              "Name": "user**-public-subnet-1"
            },
            "tags_all": {
              "Managed_by": "terraform",
              "Name": "user**-public-subnet-1"
            },
            "vpc_id": "vpc-0d8f1ce5760c97c42"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:052937454741:vpc/vpc-0d8f1ce5760c97c42",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b9ad472ee46715d0",
            "default_route_table_id": "rtb-0ff49df88f8b8177e",
            "default_security_group_id": "sg-011a89cee9ade90e4",
            "dhcp_options_id": "dopt-06a9498791bb6ebc9",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0d8f1ce5760c97c42",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ff49df88f8b8177e",
            "owner_id": "052937454741",
            "tags": {
              "Managed_by": "terraform",
              "Name": "user**-vpc"
            },
            "tags_all": {
              "Managed_by": "terraform",
              "Name": "user**-vpc"
            }
          }
        }
      ]
    }
  ]
}